--- a/PAAKAT/EXAMPLES/CXX/E03_OCYL/makefile.dummy
+++ b/PAAKAT/EXAMPLES/CXX/E03_OCYL/makefile.dummy
@@ -17,12 +17,12 @@ clean :
 
 compilelib : removelib clean
 	@find $(ROOT_CATALYST)  | grep ParaViewConfig.cmake  | wc -l   # [1] 
-	@cmake . -DCMAKE_CXX_COMPILER=$(CXX) -DCMAKE_C_COMPILER=$(CC) -DParaView_DIR=$(ROOT_CATALYST)  
+	@cmake . -DCMAKE_CXX_COMPILER=$(CXX) -DCMAKE_C_COMPILER=$(CC) -DCMAKE_Fortran_COMPILER=$(FC) -DParaView_DIR=$(ROOT_CATALYST)  
 	@make --no-print-directory # [2] 
 
 
 getincludesandlibs :
-	@mpiexec -n 1 python3 getIncludeAndLibs.py -F iam_alya.x   
+	@python3 getIncludeAndLibs.py -F nek5k01_01.x   
 
 
 removelib : 
